--- a/index.html
+++ b/index.html
@@ -368,7 +368,6 @@
     <script type="module" src="./contact.js"></script>
     <script type="module" src="./animationThree.js"></script>
     <script type="module" src="./firstPage.js"></script>
-    <script type="module" src="./carousel.js"></script>
- 
+    <script type="module" src="./animation.js"></script>
   </body>
 </html>
