cv has been addded

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div id="bar">
       <div class="bar-sub"> <h3> LUKASZ PIETRZYKOWSKI </h3> <h5> portfolio webiste </h5> </div>
-      <div class="bar-sub"> <h5> CV </h5> </div>
+      <div class="bar-sub"> <h5> <a href="cv.pdf"  target="_blank"> CV </a> </h5> </div>
     </div>
     <div class="frontpage">
         <div class="three-d">
