--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lukasz Pietrzykowski portfolio webiste</title>
     <link rel="stylesheet" href="./style.css">
@@ -187,8 +187,8 @@
       <div class="second-carousel-card-h2">
         <h2> Check out my other projects on my github:</h2>
       </div>
-      <div class="#151515-github-logo">
-        <a href="https://github.com/LukaszPietrzykowski16" aria-label="Link to my github">  <i class="icon-github-circled"></i> </a>
+      <div class="my-github">
+        <a href="https://github.com/LukaszPietrzykowski16" aria-label="Link to my github">  <i class="icon-github-circled large"></i> </a>
       </div>
       
     </div>
