visual update of the page

--- a/index.html
+++ b/index.html
@@ -101,104 +101,77 @@
 
     <div class="my-work">
       <div class="my-work-div">
-        <div class="my-work-card">
-          <div class="main-header">Portfolio website for Physiotherapist</div>
-          <br />
+        <div class="card">
           <img
-            src="images/jankowska-agnieszka.PNG"
-            alt="Screenshot from page for physiotherapist"
+            src="images/jankowska-agnieszka.webp"
+            alt="Physiotherapist website"
+            class="card-image"
           />
-          <div class="carousel-padding">
-            <p>
+          <div class="card-content">
+            <h2>Portfolio website for<br />Physiotherapist</h2>
+            <p class="description">
               Personal page for Physiotherapist to show up work, and make
               contact with clients
             </p>
-            <div class="second-header">Technology used:</div>
-            <ul>
-              <li>Astro, tailwind</li>
-            </ul>
-          </div>
-
-          <div class="carousel-footer">
-            <div class="carousel-footer-btn">
-              <a
-                href="https://www.jankowska-agnieszka.pl/"
-                target="_blank"
-                aria-label="Link to the physiotherapist website"
-              >
-                <button class="black-btn">Live preview</button>
-              </a>
-            </div>
+            <p class="tech-title">Technology used:</p>
+            <p class="tech-list">Astro, Tailwind</p>
+            <a
+              href="https://www.jankowska-agnieszka.pl/"
+              target="_blank"
+              aria-label="Link to the physiotherapist website"
+            >
+              <button class="black-btn">Live preview</button>
+            </a>
           </div>
         </div>
-        <div class="my-work-card">
-          <div class="main-header">Portfolio website for Handicraft artist</div>
 
+        <div class="card">
           <img
-            src="images/szydelkowa-pasja.PNG"
+            src="images/szydelkowa-pasja.webp"
             alt="Screenshot from page for Handicraft artist"
+            class="card-image"
           />
-          <div class="carousel-padding">
-            <p>
+          <div class="card-content">
+            <h2>Portfolio website for Handicraft artist</h2>
+            <p class="description">
               Personal page for Handicraft artist to show up work, and make blog
               posts
             </p>
-            <div class="second-header">Technology used:</div>
-            <ul>
-              <li>Next.js, Tailwind CSS, graphQL</li>
-            </ul>
-          </div>
-
-          <div class="carousel-footer">
-            <div class="carousel-footer-btn">
-              <a
-                href="https://szydelkowa-pasja.vercel.app"
-                target="_blank"
-                aria-label="Link to the Handicraft arist website"
-              >
-                <button class="black-btn">Live preview</button>
-              </a>
-            </div>
+            <p class="tech-title">Technology used:</p>
+            <p class="tech-list">Next.js, Tailwind CSS, GraphQL</p>
+            <a
+              href="https://szydelkowa-pasja.pl"
+              target="_blank"
+              aria-label="Link to the Handicraft arist website"
+            >
+              <button class="black-btn">Live preview</button>
+            </a>
           </div>
         </div>
-        <div class="my-work-card">
-          <div class="main-header">Style your guitar (in progress)</div>
-
+        <div class="card">
           <img
-            src="images/style-your-guitar.PNG"
-            alt="Screenshot from page for Handicraft artist"
+            src="images/style-your-guitar.webp"
+            alt="Style your guitar project"
+            class="card-image"
           />
-          <div class="carousel-padding">
-            <p>Hobby project for creating your own guitar in 3D</p>
-            <div class="second-header">Technology used:</div>
-            <ul>
-              <li>Three.js, Javascript</li>
-            </ul>
-          </div>
-
-          <div class="carousel-footer">
-            <div class="carousel-footer">
-              <div class="carousel-footer-btn">
-                <a
-                  href="https://lukaszpietrzykowski16.github.io/style-your-guitar/"
-                  target="_blank"
-                  aria-label="Link to the physiotherapist website"
-                >
-                  <button class="black-btn">Live preview</button>
-                </a>
-              </div>
-              <div class="carousel-footer-logo">
-                <a
-                  href="https://github.com/LukaszPietrzykowski16/style-your-guitar"
-                  target="_blank"
-                  ><i class="icon-github-circled"></i>
-                </a>
-              </div>
-            </div>
+          <div class="card-content">
+            <h2>Hobby project - Style your guitar (in progress)</h2>
+            <p class="description">
+              Hobby project for creating your own guitar in 3D, created with
+              three.js
+            </p>
+            <p class="tech-title">Technology used:</p>
+            <p class="tech-list">Three.js, JavaScript</p>
+            <a
+              href="https://lukaszpietrzykowski16.github.io/style-your-guitar/"
+              target="_blank"
+              aria-label="Link to the Handicraft arist website"
+            >
+              <button class="black-btn">Live preview</button>
+            </a>
           </div>
         </div>
       </div>
-      <div class="my-work-div"></div>
     </div>
 
     <div class="technology">
@@ -230,19 +203,20 @@
           <span class="styling-3"> TECHNOLOGY </span>
         </div>
       </div>
-      <div class="technology-container">
-        <div class="technology-wannabe">
-          <span> Technology I have been working with: </span>
+      <section class="section">
+        <div class="card-technology">
+          <h3>Technology I have been working with:</h3>
           <p>
             HTML, CSS, Javascript, Typescript, Angular, Rxjs, Ngrx store, Jest,
-            Tailwind, Node.js, Git, Astro, Expo (React native)
+            Tailwind, Node.js, Git, Astro, Expo (React Native)
           </p>
         </div>
-        <div class="technology-wannabe">
-          <span>Technology I want to know more deeply: </span>
+
+        <div class="card-technology">
+          <h3>Technology I want to know more deeply:</h3>
           <p>Three.js, Gsap, D3 (graphs), NestJS (backend in general)</p>
         </div>
-      </div>
+      </section>
     </div>
 
     <div class="contact">
