fixing build by building from main.js

--- a/index.html
+++ b/index.html
@@ -240,7 +240,6 @@
         <a href="#bar"><button class="footer-btn">TO TOP</button> </a>
       </div>
     </div>
-    <script type="module" src="./scroll.js"></script>
-    <script type="module" src="./firstPage.js"></script>
+    <script type="module" src="./main.js"></script>
   </body>
 </html>
