build and chaning lets contact side, adding animation

--- a/index.html
+++ b/index.html
@@ -221,15 +221,20 @@
 
     <div class="contact">
       <div class="contact-info">
-        <div>
-          <h4 style="font-size: 2.5em">Let's Contact:</h4>
-          <p>lukaszpietrzykowsk@gmail.com</p>
-          <a href="https://github.com/LukaszPietrzykowski16">
-            <i class="icon-github-circled"></i>
-          </a>
-          <a href="https://www.linkedin.com/in/lukasz-pietrzykowski-8a8460248/">
-            <i class="icon-linkedin"></i>
-          </a>
+        <div class="contact-container">
+          <h4 class="contact-letscontact">Let's Contact:</h4>
+          <div class="contact-icons">
+            <a href="https://github.com/LukaszPietrzykowski16">
+              <i class="icon-github-circled"></i>
+            </a>
+            <a
+              href="https://www.linkedin.com/in/lukasz-pietrzykowski-8a8460248/"
+            >
+              <i class="icon-linkedin"></i>
+            </a>
+          </div>
+
+          <p class="contact-email">lukaszpietrzykowsk@gmail.com</p>
         </div>
       </div>
     </div>
